--- a/pune/css/biological_park.css
+++ b/pune/css/biological_park.css
@@ -208,6 +208,9 @@ iframe{
     margin-bottom: 0px;
 }
 
+table{
+    width: 350px;
+}
 
 
 /* hotel  */
@@ -273,6 +276,45 @@ footer{
     margin: none;
 }
 
+
+/* other places  */
+/* ******************************************************************* */
+.otherplaces{
+    width: 100%;
+}
+
+.pn{
+    padding:0px;
+}
+
+.otherplaces ul{
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    justify-content: space-evenly;
+}
+
+.other{
+    background-color: rgb(225, 225, 225);
+    border:2px solid white;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.other:hover{
+    border: 2px solid black;
+    background-color: rgb(255, 255, 255);
+}
+
+.present{
+    border: 2px solid black;
+    background-color: rgb(255, 255, 255);
+
+}
+
 /* mobile optimisation */
 /* ******************************************************************* */
 @media screen and (max-width:600px){
@@ -295,5 +337,8 @@ footer{
     .hotpn{
         width: 300px;
         padding-left: 0px;
+    }
+    table{
+        width: 250px;
     }
 }
