--- a/pune/css/biological_park.css
+++ b/pune/css/biological_park.css
@@ -197,12 +197,29 @@ nav {
 }
 
 #img{
-    background-color: black;
-    height: 400px;;
+    display: flex;
+    background-position: center;
+    height: 500px;;
     width: 95%;
     margin-right: 10%;
     margin-left: 10%;
+    background-image: url(../images/rajiv_gandhi_zoo/rz1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider 15s infinite ease-in;
 }
+
+@keyframes slider{
+    20%{ background-image: url(../images/rajiv_gandhi_zoo/rz1.jpg);}
+    25%{ background-image: url(../images/katraj_snake_park/kp1.jpg);}
+    45%{ background-image: url(../images/katraj_snake_park/kp2.jpg);}
+    55%{ background-image: url(../images/rajiv_gandhi_zoo/rz3.jpg);}
+    70%{ background-image: url(../images/rajiv_gandhi_zoo/rz3.jpg);}
+    75%{ background-image: url(../images/rajiv_gandhi_zoo/rz4.jpg);}
+    95%{ background-image: url(../images/rajiv_gandhi_zoo/rz4.jpg);}
+
+}
+
 
 /* reachablity  */
 /* ***************************************************************** */
